--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,5 +21,5 @@ jobs:
 
           - name: Push alpine-doom image
             run: |
-              docker tag alpine-doom:latest "${{ secrets.DOCKERHUB_USERNAME }}/alpine-novnc:latest"
+              docker tag alpine-doom:latest "${{ secrets.DOCKERHUB_USERNAME }}/alpine-doom:latest"
               docker push "${{ secrets.DOCKERHUB_USERNAME }}/alpine-doom:latest"
