--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,9 +17,9 @@ jobs:
               password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
           - name: Build debian-doom image
-            run: docker build -t debian-doom:latest Docker/.
+            run: docker build -t docker-doom:latest Docker/.
 
           - name: Push debian-doom image
             run: |
-              docker tag debian-doom:latest "${{ secrets.DOCKERHUB_USERNAME }}/debian-doom:latest"
-              docker push "${{ secrets.DOCKERHUB_USERNAME }}/debian-doom:latest"
+              docker tag debian-doom:latest "${{ secrets.DOCKERHUB_USERNAME }}/docker-doom:latest"
+              docker push "${{ secrets.DOCKERHUB_USERNAME }}/docker-doom:latest"
