--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -3,7 +3,31 @@ run-name: Build and deploy docker images on dockerhub
 
 on: [push]
 jobs:
-    build_job:
+    build_base_job:
+      runs-on: ubuntu-latest
+
+      steps:
+          - name: Checkout
+            uses: actions/checkout@v4
+
+          - name: Autenticate with Docker Hub
+            uses: docker/login-action@v2
+            with:
+              username: ${{ secrets.DOCKERHUB_USERNAME }}
+              password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          
+          - name: Get debian-novnc Base Files
+            run: wget git@github.com:B0nam/DEBIAN-DOCKER-NOVNC.git
+
+          - name: Build debian-novnc Base
+            run: docker build -t debian-novnc:base DEBIAN-DOCKER-NOVNC/Base/.
+  
+          - name: Push debian-novnc Base
+            run: |
+              docker tag debian-novnc:base "${{ secrets.DOCKERHUB_USERNAME }}/debian-novnc:base"
+              docker push "${{ secrets.DOCKERHUB_USERNAME }}/debian-novnc:base"
+
+    build_doom_job:
       runs-on: ubuntu-latest
 
       steps:
