--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,6 +28,7 @@ jobs:
               docker push "${{ secrets.DOCKERHUB_USERNAME }}/debian-novnc:base"
 
     build_doom_job:
+      needs: build_base_job
       runs-on: ubuntu-latest
 
       steps:
