Build latest tag

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,5 +32,5 @@ jobs:
               IMAGE_TAG: ${{ github.sha }}
             working-directory: ./Docker
             run: |
-              docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-              docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+              docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest .
+              docker push -a $REGISTRY/$REPOSITORY
